@@ -241,6 +241,9 @@ div.submenu {
 	background-color: white;
 	border: 1px solid #D8D8E7;
 }
+#nav-search input[type="text"] {
+	width: 150px;
+}
 
 /* diff page */
 
@@ -326,22 +329,32 @@ div.submenu {
 
 /* tab menu */
 
-#tab-menu {
+ul#tab-menu {
 	padding: 0;
 	margin: 0;
 	margin-left: 6px;
+	display: inline-block;
+	list-style: inherit;
+	list-style-type: none;
 }
-#tab-menu .tab-item {
+ul#tab-menu li {
 	float: left;
 	background: white;
 	color: blue;
 	border: 1px solid #D8D8E7;
 	border-bottom: none;
-	padding: 0.2em 0.5em 0.2em 0.5em;
+	padding: 0 0.5em;
 	margin: 0;
-	margin-right: 6px;
+	margin-right: 4px;
+	min-width: 40px;
 	font-size: 85%;
 	text-align: center;
+}
+ul#tab-menu li.active {
+	margin-bottom: -1px;
+	border-bottom: 1px solid #fff;
+	font-size: 90%;
+	font-weight: bold;
 }
 
 /* user menu */
@@ -566,6 +579,7 @@ div.row {
 	border-top: 1px solid #fff;
 }
 div.row span {
+	display: inline-block;
 	vertical-align: top;
 	text-align: left;
 	padding-left: 5px;
