@@ -59,6 +59,9 @@ New Features:
   * Remove the "export internal database to CSV" functionality - since it
     is now possible to export to XML and migrate databases this capability
     is no longer needed.
+  * Highlight the currently selected tab on each page by adding an "active" CSS
+    class.  Suggested by cstenkes.
+  * Resize large images on Image: pages to a maximum dimension of 800x600.
   * Upgrade to Spring Framework 3.0.1.RELEASE.
   * Upgrade to Spring Security 3.0.2.RELEASE.
   * Upgrade to Lucene Search 3.0.1.
